--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Provider/Sites.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Provider/Sites.cshtml
@@ -41,7 +41,7 @@
                         <tr>
                             <td>@providerSiteViewModel.DisplayName</td>
                             <td>
-                                <!--<a href="@Url.RouteUrl(RecruitmentRouteNames.EditProviderSite, new {ern = providerSiteViewModel.Ern})">Edit</a>-->
+                                <!--<a href="@Url.RouteUrl(RecruitmentRouteNames.EditProviderSite, new {ern = providerSiteViewModel.EdsErn})">Edit</a>-->
                             </td>
                             <td></td>
                         </tr>
