--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Summary.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Summary.cshtml
@@ -1,10 +1,10 @@
-﻿@model VacancySummaryViewModel
+﻿@model FurtherVacancyDetailsViewModel
 @using SFA.Apprenticeships.Web.Manage.Constants
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
 
 @using (Html.BeginRouteForm(ManagementRouteNames.Summary, FormMethod.Post))
 {
-    @Html.DisplayFor(m => m, VacancySummaryViewModel.PartialView)
+    @Html.DisplayFor(m => m, FurtherVacancyDetailsViewModel.PartialView)
 
     <div class="grid grid-1-2">
         <button type="submit" class="button">Save</button>
