Displays a list of linked employers. Pagination and filtering don't work yet

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/AddEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/AddEmployer.cshtml
@@ -24,7 +24,7 @@
                 </label>
             </div>
             <div id="ernsearch-panel" class="toggle-content blocklabel-content">
-                @Html.FormTextFor(m => m.Ern)
+                @Html.FormTextFor(m => m.EdsErn)
                 <div class="form-group">
                     <button class="button">Find employer</button>
                 </div>
