--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/EmployerInformation.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/EmployerInformation.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProviderSiteEmployerLinkViewModel
+﻿@model VacancyPartyViewModel
 @using SFA.Apprenticeships.Web.Manage.Constants
 @using SFA.Apprenticeships.Web.Raa.Common.Extensions
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Provider
@@ -20,7 +20,7 @@
 
 @using (Html.BeginRouteForm(ManagementRouteNames.EmployerInformation, FormMethod.Post))
 {   
-    @Html.DisplayFor(m => m, ProviderSiteEmployerLinkViewModel.PartialView)
+    @Html.DisplayFor(m => m, VacancyPartyViewModel.PartialView)
 
     <div class="grid grid-1-1">
         <button class="button" id="confirmEmployer" name="ConfirmEmployer" value="ConfirmEmployer">@saveButtonText</button>
