--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/EmployerDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/EmployerDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Provider.ProviderSiteEmployerLinkViewModel
+﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Provider.VacancyPartyViewModel
 @using System.Web.Mvc.Html
 @using SFA.Apprenticeships.Web.Raa.Common.Extensions
 
@@ -6,7 +6,7 @@
     @Html.Partial("ValidationSummary", ViewData.ModelState)
 
     @Html.HiddenFor(m => m.ProviderSiteEdsErn)
-    @Html.HiddenFor(m => m.Employer.Ern)
+    @Html.HiddenFor(m => m.Employer.EdsErn)
     @Html.HiddenFor(m => m.VacancyGuid)
     @Html.HiddenFor(m => m.VacancyReferenceNumber)
     @Html.HiddenFor(m => m.ComeFromPreview)
