--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmNewEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmNewEmployer.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProviderSiteEmployerLinkViewModel
+﻿@model VacancyPartyViewModel
 @using System.Web.Mvc.Html
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Provider
 @using SFA.Apprenticeships.Web.Recruit.Constants
@@ -17,11 +17,11 @@
 
 @using (Html.BeginRouteForm(RecruitmentRouteNames.ComfirmNewEmployer, FormMethod.Post))
 {
-    @Html.DisplayFor(m => m, ProviderSiteEmployerLinkViewModel.PartialView)
+    @Html.DisplayFor(m => m, VacancyPartyViewModel.PartialView)
 
     <div class="grid grid-1-1">
         <button class="button">Save description and link to employer</button>
-        @Html.RouteLink("Choose a different employer", RecruitmentRouteNames.SelectNewEmployer, new { providerSiteErn = Model.ProviderSiteEdsErn, ern = Model.Employer.Ern, vacancyGuid = Model.VacancyGuid, comeFromPreview = Model.ComeFromPreview })
+        @Html.RouteLink("Choose a different employer", RecruitmentRouteNames.SelectNewEmployer, new { providerSiteErn = Model.ProviderSiteEdsErn, ern = Model.Employer.EdsErn, vacancyGuid = Model.VacancyGuid, comeFromPreview = Model.ComeFromPreview })
     </div>
 }
 
