--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
@@ -7,10 +7,10 @@
 
     const string selected = "selected";
     var vacancyGuidValue = Model.VacancyGuid ?? Guid.NewGuid();
-    var ernSearchSelected = Model.FilterType == EmployerFilterType.Ern ? selected : null;
+    var edsErnSearchSelected = Model.FilterType == EmployerFilterType.EdsErn ? selected : null;
     var nameAndLocationSearchSelected = Model.FilterType == EmployerFilterType.NameAndLocation ? selected : null;
     var noResults = (Model.EmployerResults == null || !Model.EmployerResults.Any()) && (Model.EmployerResultsPage == null || Model.EmployerResultsPage.ResultsCount == 0);
-    var detailsOpen = noResults && (!string.IsNullOrWhiteSpace(ernSearchSelected) || !string.IsNullOrWhiteSpace(nameAndLocationSearchSelected)) ? "class=open open" : "";
+    var detailsOpen = noResults && (!string.IsNullOrWhiteSpace(edsErnSearchSelected) || !string.IsNullOrWhiteSpace(nameAndLocationSearchSelected)) ? "class=open open" : "";
 }
 <div class="grid-wrapper">
     <div class="hgroup">
@@ -26,7 +26,7 @@
         <div class="no-employers-found">
             <p>No employers matched your search:</p>
             <ul>
-                @if (!string.IsNullOrWhiteSpace(ernSearchSelected))
+                @if (!string.IsNullOrWhiteSpace(edsErnSearchSelected))
                 {
                     <li>check the ERN is correct</li>
                     <li>try searching by employer name or location</li>
@@ -37,12 +37,12 @@
                     <li>try searching by ERN</li>
                 }
             </ul>
-            <p class="no-employers-optional-action">AltedsErnatively, you might need to create a <a href="@Url.RouteUrl(RecruitmentRouteNames.SelectNewEmployer, new {providerSiteErn = Model.ProviderSiteEdsErn, vacancyGuid = Model.VacancyGuid})">link to the employer</a></p>
+            <p class="no-employers-optional-action">AltedsErnatively, you might need to create a <a href="@Url.RouteUrl(RecruitmentRouteNames.SelectNewEmployer, new {providerSiteId = Model.ProviderSiteId, vacancyGuid = Model.VacancyGuid})">link to the employer</a></p>
         </div>
     }
 
     <section class="clearfix" id="providerSiteResults">
-        <a class="select-employer-link-to-new" href="@Url.RouteUrl(RecruitmentRouteNames.SelectNewEmployer, new {providerSiteErn = Model.ProviderSiteEdsErn, vacancyGuid = Model.VacancyGuid, comeFromPreview = Model.ComeFromPreview})">Link to a new employer</a>
+        <a class="select-employer-link-to-new" href="@Url.RouteUrl(RecruitmentRouteNames.SelectNewEmployer, new {providerSiteId = Model.ProviderSiteId, vacancyGuid = Model.VacancyGuid, comeFromPreview = Model.ComeFromPreview})">Link to a new employer</a>
         <h2 class="heading-small">Search your employers</h2>
         <details @detailsOpen>
             <summary>Search your employers</summary>
@@ -55,20 +55,20 @@
                             Name and location
                         </label>
                         @* ReSharper disable once Html.IdNotResolved *@
-                        <label data-target="edsErn-search-panel" for="edsErn-search" class="block-label @ernSearchSelected">
-                            @Html.RadioButtonFor(model => model.FilterType, EmployerFilterType.Ern, new {id = "edsErn-search", aria_controls = "edsErn-search-panel"})
+                        <label data-target="edsErn-search-panel" for="edsErn-search" class="block-label @edsErnSearchSelected">
+                            @Html.RadioButtonFor(model => model.FilterType, EmployerFilterType.EdsErn, new {id = "edsErn-search", aria_controls = "edsErn-search-panel"})
                             ERN
                         </label>
                     </div>
 
                     @using (Html.BeginForm(null, null, null, FormMethod.Get, new {@action = Url.RouteUrl(RecruitmentRouteNames.SearchExistingEmployer) + "#providerSiteResults", @id = "edsErn-search-form"}))
                     {
-                        @Html.HiddenFor(model => model.ProviderSiteEdsErn)
+                        @Html.HiddenFor(model => model.ProviderSiteId)
                         @Html.HiddenFor(model => model.VacancyGuid)
                         @Html.HiddenFor(model => model.ComeFromPreview)
 
                         <div id="ern-search-panel" class="toggle-content blocklabel-content">
-                            @Html.FormTextFor(model => model.Ern)
+                            @Html.FormTextFor(model => model.EdsErn)
 
                             <button id="ern-search-button" type="submit" class="button">
                                 Find employer
@@ -78,7 +78,7 @@
 
                     @using (Html.BeginForm(null, null, null, FormMethod.Get, new {@action = Url.RouteUrl(RecruitmentRouteNames.SearchExistingEmployer) + "#providerSiteResults", @id = "name-location-search-form"}))
                     {
-                        @Html.HiddenFor(model => model.ProviderSiteEdsErn)
+                        @Html.HiddenFor(model => model.ProviderSiteId)
                         @Html.HiddenFor(model => model.VacancyGuid)
                         @Html.HiddenFor(model => model.ComeFromPreview)
 
@@ -133,7 +133,7 @@
                             </td>
                             <td>@employerResultsViewModel.Ern</td>
                             <td>
-                                <a href="@Url.RouteUrl(RecruitmentRouteNames.ConfirmEmployerSelection, new {providerSiteErn = Model.ProviderSiteEdsErn, ern = employerResultsViewModel.Ern, vacancyGuid = vacancyGuidValue, comeFromPreview = Model.ComeFromPreview})">Select employer</a>
+                                <a href="@Url.RouteUrl(RecruitmentRouteNames.ConfirmEmployerSelection, new {providerSiteId = Model.ProviderSiteId, ern = employerResultsViewModel.Ern, vacancyGuid = vacancyGuidValue, comeFromPreview = Model.ComeFromPreview})">Select employer</a>
                             </td>
                         </tr>
                     }
