Up to basic vacancy details page

--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/BasicVacancyDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/BasicVacancyDetails.cshtml
@@ -82,8 +82,7 @@
 
     @Html.HiddenFor(model => model.VacancyReferenceNumber)
     @Html.HiddenFor(model => model.Ukprn)
-    @Html.HiddenFor(model => model.ProviderId)
-    @Html.HiddenFor(model => model.EmployerId)
+    @Html.HiddenFor(model => model.OwnerParty.VacancyPartyId)
     @Html.HiddenFor(model => model.VacancyGuid)
     @Html.HiddenFor(model => model.Status)
 }
