--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SubmitVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SubmitVacancy.cshtml
@@ -102,7 +102,7 @@
                                 @if (Model.VacancyParty.IsWebsiteUrlWellFormed)
                                 {
                                     <p>
-                                        <a href="@Model.VacancyParty.WebsiteUrl" target="_blank" rel="external">@Model.VacancyParty.WebsiteUrl</a>
+                                        <a href="@Model.VacancyParty.WebsiteUrl" target="_blank" rel="external">@Model.OwnerParty.WebsiteUrl</a>
                                     </p>
                                 }
                                 <h3 class="bold-small">Address</h3>
