--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySubmitted.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySubmitted.cshtml
@@ -48,7 +48,7 @@
         <span class="subtitle">Start with a fresh template or continue with a draft</span>
     </div>
     <div class="form-group">
-        <a href="@Url.RouteUrl(RecruitmentRouteNames.SelectExistingEmployer, new { providerSiteErn = Model.ProviderSiteEdsErn })" class="button">Create new vacancy</a>
+        <a href="@Url.RouteUrl(RecruitmentRouteNames.SelectExistingEmployer, new { providerSiteId = Model.ProviderSiteId })" class="button">Create new vacancy</a>
     </div>
     <p>
         <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome)">Return to recruitment home</a>
