--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/LocationSearch.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/LocationSearch.cshtml
@@ -12,7 +12,7 @@
 </h1>
 
 @Html.HiddenFor(m => m.Ukprn)
-@Html.HiddenFor(m => m.Ern)
+@Html.HiddenFor(m => m.EmployerErn)
 @Html.HiddenFor(m => m.ProviderSiteEdsErn)
 @Html.HiddenFor(m => m.VacancyGuid)
 @Html.HiddenFor(m => m.ComeFromPreview)
