--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
@@ -131,7 +131,7 @@
     <footer class="gov-border" role="contentinfo">
         <div class="footer__wrapper">
             <div class="footer__meta">
-                <ul class="footer__nav" role="navigation">
+                <ul class="footer__nav">
                     <li class="small-btm-margin"><a class="bold-medium" href="@Url.RouteUrl(RecruitmentRouteNames.ContactUs)">Contact us</a></li>
                     <li class="footer__link"><a href="@Url.RouteUrl(RecruitmentRouteNames.Privacy)">Privacy and cookies</a></li>
                     <li class="footer__link"><a href="@Url.RouteUrl(RecruitmentRouteNames.TermsAndConditions)">Terms and conditions</a></li>
