--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
         <div class="global-header__wrapper">
             <div class="global-header__logo">
                 <a href="http://gov.uk" title="Go to the GOV.UK homepage" class="govuk-logo">
-                    <img src="@Url.CdnImage("gov.uk_logotype_crown.png")" alt="Crown">GOV.UK
+                    <img src="@Url.CdnImage("gov.uk_logotype_crown.png")" ŵidth="35" height="31" alt="Crown">GOV.UK
                 </a>
             </div>
             <div class="global-header__nav">
