Hid home link from home page (/home)

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_LoginPartial.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_LoginPartial.cshtml
@@ -10,7 +10,10 @@
         @if (User.IsInRole(SFA.Apprenticeships.Domain.Entities.Roles.VerifiedEmail))
         {
             <div>
-                <a class="account-link" id="applicationsLink" href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome)">Home</a>
+                @if(Request.RawUrl != Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome)) {
+                    <a class="account-link" id="applicationsLink" href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome)">Home</a>
+                }
+                
                 <!--<a class="account-link" id="applicationsLink" href="@Url.RouteUrl(RecruitmentRouteNames.ManageProviderSites)">Provider details</a>-->
                 <!--<a class="" id="applicationsLink" href="user-info.html">Contact details</a>-->
             </div>
